RESOLVED FIXED86686
Crash if SVG gradient stop has display: none set
https://bugs.webkit.org/show_bug.cgi?id=86686
Summary Crash if SVG gradient stop has display: none set
Tim Horton
Reported 2012-05-16 16:05:54 PDT
We crash if an otherwise-valid SVG gradient stop has display: none set, because there is no renderer created, but we depend on it having been created. I have a patch. <rdar://problem/10751905>
Attachments
patch (3.90 KB, patch)
2012-05-16 16:16 PDT, Tim Horton
no flags
Tim Horton
Comment 1 2012-05-16 16:16:41 PDT
Dean Jackson
Comment 2 2012-05-16 16:29:15 PDT
Comment on attachment 142362 [details] patch View in context: https://bugs.webkit.org/attachment.cgi?id=142362&action=review > LayoutTests/ChangeLog:5 > + <rdar://problem/10751905> I don't *think* we typically include the radar link in ChangeLogs.
Alexey Proskuryakov
Comment 3 2012-05-16 16:39:47 PDT
Comment on attachment 142362 [details] patch View in context: https://bugs.webkit.org/attachment.cgi?id=142362&action=review >> LayoutTests/ChangeLog:5 >> + <rdar://problem/10751905> > > I don't *think* we typically include the radar link in ChangeLogs. Please do include them, and encourage that practice! :)
WebKit Review Bot
Comment 4 2012-05-16 17:06:32 PDT
Comment on attachment 142362 [details] patch Clearing flags on attachment: 142362 Committed r117365: <http://trac.webkit.org/changeset/117365>
WebKit Review Bot
Comment 5 2012-05-16 17:06:42 PDT
All reviewed patches have been landed. Closing bug.
Dean Jackson
Comment 6 2012-05-17 11:26:00 PDT
(In reply to comment #3) > (From update of attachment 142362 [details]) > View in context: https://bugs.webkit.org/attachment.cgi?id=142362&action=review > > >> LayoutTests/ChangeLog:5 > >> + <rdar://problem/10751905> > > > > I don't *think* we typically include the radar link in ChangeLogs. > > Please do include them, and encourage that practice! :) Yeah, I was corrected on IRC. What's crazy is that I've been intentionally leaving them out for years!
Note You need to log in before you can comment on or make changes to this bug.