third_party/WebKit/Source/WebCore/svg/SVGStopElement.cpp
@@ -107,6 +107,11 @@ RenderObject* SVGStopElement::createRenderer(RenderArena* arena, RenderStyle*)
     return new (arena) RenderSVGGradientStop(this);
 }
 
+bool SVGStopElement::rendererIsNeeded(const NodeRenderingContext&)
+{
+    return true;
+}
+
 Color SVGStopElement::stopColorIncludingOpacity() const
 {
     ASSERT(renderer());
